# Internet_Chat_Client

./: .gitignore  ARCHITECTURE.md  CMakeLists.txt  QUICK_START.md  package.xml
include/internet_chat_client/: chat_node.hpp
src/: chat_gui_main.cpp  chat_launcher.cpp  chat_node.cpp  chat_node_impl.cpp
